Z-index issue fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,7 @@ Description: Nexus Hue - Artist - Creative Agency from Fresno Ca<
   background-color: #ffffff;  
   border-radius: 15px;       
   padding: 20px;              
-
+z-index: 3;
   border-left: 11px solid var(--theme); 
   user-select: none;
   -webkit-user-drag: none;
@@ -1417,7 +1417,7 @@ footer {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  z-index: -9999;
+  z-index: -9;
 }
 
 #shootingstars {
@@ -1429,7 +1429,7 @@ footer {
   overflow: hidden;
   transform: translatex(calc(50vw - 50%)) translatey(calc(50vh - 50%))
     rotate(120deg);
-    z-index: -9999;
+    z-index: -9;
 }
 
 .wish {
